--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "google-spreadsheet": "^3.1.15",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-markdown": "^6.0.1",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "@types/react-dom": "17.0.3",
     "@types/styled-components": "5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
+    "raw-loader": "^4.0.2",
     "typescript": "4.2.4"
   },
   "license": "MIT"
