--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "google-spreadsheet": "^3.1.15",
     "gray-matter": "^4.0.3",
+    "hetter": "^1.1.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
